--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.23",
         "laravel/pint": "^1.11",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.0",
-        "pestphp/pest": "^2.16",
-        "phpunit/phpunit": "^10.1",
+        "pestphp/pest": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.0",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
@@ -56,6 +57,13 @@
         ],
         "pest":[
             "@php ./vendor/bin/pest"
+        ],
+        "clean":[
+            "@php ./vendor/bin/pint",
+            "@php ./vendor/bin/phpstan analyse --memory-limit=2G",
+            "@php ./vendor/bin/pest"
+
+
         ]
     },
     "extra": {
